# django_template

./: .editorconfig  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .prettierignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/assets/js/: main.js
{{cookiecutter.project_slug}}/config/: asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py  prod.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/: utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/templatetags/: pagination_tags.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/pages/: urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/pages/tests/: test_views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: _header.html  base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/common/: _pagination.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/email/: confirm-email.html  reset-password.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/pages/: contact.html  cookies.html  faq.html  home.html  (+1 more)
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
(+7 files in other folders)
